staging/tvplatform-factory-cacheserver/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tvplatform-factory-cacheserver
  namespace: default
  labels:
    app: tvplatform-factory-cacheserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tvplatform-factory-cacheserver
  template:
    metadata:
      labels:
        app: tvplatform-factory-cacheserver
    spec:
      containers:
      - name: tvplatform-factory-cacheserver
        image: registry.digitalocean.com/obs-tvplatform-backend/tvplatform-factory-cacheserver:6-staging # will be updated by jenkins PRs
        imagePullPolicy: Always
      imagePullSecrets:
      - name: obs-tvplatform-backend
