staging/tvplatform-factory-cacheserver/service.yml
apiVersion: v1
kind: Service
metadata:
  name: tvplatform-factory-cacheserver
  namespace: default
spec:
  type: NodePort
  selector:
    app: tvplatform-factory-cacheserver
  ports:
  - name: http
    port: 8000 # svc port
    targetPort: 8000 # app port
